# Playground

./: .gitignore  CMakeLists.txt  Faster_RCNN_resnet50.ipynb  README.md  app.js  db.json  index.html  index.js  main.cpp  main.js  makefile  package-lock.json  package.json  sub.js
.github/workflows/: Windows-Build.yml  atoma.yml  build-test.yml  build.yaml  cmake-multi-platform.yml  comment.yml  issue.yml  makefile.yml  my-cmake.yml
AbstractFactory/: Chair.py  Factory.py  Table.py  main.py
Builder/: Director.py  House.py  HouseBuilder.py  main.py
FactoryMethod/: logistic.py  main.py  vehicle.py
myenv/myproject/: db.sqlite3
myenv/myproject/myapp/: models.py
myenv/myproject/myapp/migrations/: 0001_initial.py
myenv/myproject/myproject/: settings.py
public/: index.html
src/: index.js  main.cpp
src/MyMath/: CMakeLists.txt  MyMath.cpp  MyMath.h
test/: MathTest.cpp
tests/: MathTest.cpp
